--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 h1 {
-    color: red;
-    border: 1.0rem groove red;
+    color: rgb(0, 0, 0);
+    border: 1.0rem double rgb(20, 109, 121);
 }
 h2, h3, h4, h5, h6 {
 
@@ -37,7 +37,7 @@ a:hover {
 
 footer {
     clear: both;
-    background: rgb(116, 112, 112) url("../img/pngtree-school-icon-for-your-project-png-image_1520362-removebg-preview.png") no-repeat left bottom;
+    background: rgb(20, 109, 121) url("../img/pngtree-school-icon-for-your-project-png-image_1520362-removebg-preview.png") no-repeat left bottom;
     height: 3rem;
 }
 
@@ -56,8 +56,8 @@ div{
 }
 
 h1.page2{
-    color: blue;
-    border: 2rem groove rgb(83, 83, 192);
+    color: rgb(0, 0, 0);
+    border: 1rem double rgb(20, 109, 121);
     border-radius: 1rem;
 }
 
@@ -77,6 +77,22 @@ main.grid {
     gap: 10rem;
 }
 
-main
+main.flexbox {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+main.flexbox  article {
+    background-color: lightcoral;
+    margin: 1rem;
+    padding: 2rem;
+}
 
 
+a#baixo {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
